# claude-code-config

./: .gitignore  CLAUDE.md  LICENSE  README.md  settings.example.json
agents/: build-error-resolver.md  code-reviewer.md  cpp-reviewer.md  python-reviewer.md  tdd-guide.md
examples/: .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Dockerfile  biome.json  docker-compose.yml  eslint.config.js  logging_config.py  pyproject.toml  tsconfig.json  vcpkg.json
examples/.github/workflows/: ci.yml
hooks/: hooks.json
rules/common/: coding-style.md  config-standards.md  doc-lookup.md  documentation.md  logging.md  oop-design.md  project-architectures.md  reasoning-planning-routing.md  repo-structure.md  rule-freshness.md  shell-fish.md
rules/cpp/: build-architecture.md  c-patterns.md  cpp-patterns.md  design-patterns-cpp.md  lint-strict.md
rules/data/: data-engineering.md  db-design.md  mlops-rag.md  project-structure.md  sql-dbt.md
rules/devops/: devops.md
rules/frontend/: design-skill-routing.md  monorepo-turborepo.md  nextjs-architecture.md
rules/python/: fastapi-architecture.md  lint-strict.md  oop-idioms.md  python-patterns.md  typing-strict.md
rules/typescript/: design-patterns.md  lint-strict.md  typescript-patterns.md  typing-strict.md
skills/audit-docs/: SKILL.md
skills/audit-quality/: SKILL.md
skills/audit-security/: SKILL.md
skills/copilot-instructions/: SKILL.md
skills/design-system/: SKILL.md
skills/explore-project/: SKILL.md
skills/init-project/: SKILL.md
skills/lint-zero/: SKILL.md
skills/pr-create/: SKILL.md
skills/split-commit/: SKILL.md
skills/sync-recap/: SKILL.md
skills/write-docs/: SKILL.md
